--- a/development/backend/api/pagination.mdx
+++ b/development/backend/api/pagination.mdx
@@ -508,7 +508,7 @@ export function usePagination<T>(
 }
 ```
 
-## Best Practices
+## Implementation Guidelines
 
 ### 1. Consistent Parameter Validation
 
